--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -45,6 +45,18 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 	}
+	.section2 {
+	        background-color:aliceblue;
+	        color:black;
+	        clear:both;
+	        text-align:center;
+	        padding:5px; 
+		border-style: groove;		
+		border-radius: 20px;
+		margin-top: 10px;
+/* 		text-align: justify; */
+/* 		border-color: skyblue; */
+	}
 	.footer1{
 		margin-top: 15px;	
 		}
@@ -112,13 +124,18 @@
             <div class="introdution">
                 <div id="theme">                    
 		    <div class="section1 removeborder">			 
-                    <p style="text-indent:2em ">*AI, Implementation, Application and Security-AIAS<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
-		    <p style="text-indent:2em ">*Blockchains, Implementation, Application and Security-BIAS<a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a> <a href="image/BL Training Course Registration Form-培训课程注册登记表.doc" download="BL Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-		    <p style="text-indent:2em ">*Secure and Privacy-preserving Computation, Implementation and Application-SPC<a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-                    </div>	
+                    <p style="text-indent:2em ">*AI, Implementation, Application and Security-AIAS<br/>
+		    <p style="text-indent:2em ">*Blockchains, Implementation, Application and Security-BIAS<br/>
+		    <p style="text-indent:2em ">*Secure and Privacy-preserving Computation, Implementation and Application-SPC<br/>
+                    </div>
+			<div class="section2 removeborder">
+				<p style="text-indent:2em "><a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a><br/>
+				<p style="text-indent:2em "><a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a><br/>
+				<p style="text-indent:2em "><a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a><br/>
+			</div>
 			<div class="footer1 removeborder">
-			<p><a href="Register.html">Register</a></p>
-			<p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc">Registration Form</a></p>
+			<p><a href="Register.html">Register</a></p>			
+			<p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc" download="Conference and Training Camp Registration Form-注册登记表.doc">Registration Form(注册登记表)</a></p>
 			</div>
 			<div class="footer2 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
