--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -45,6 +45,18 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 	}
+	.section2 {
+	        background-color:aliceblue;
+	        color:black;
+	        clear:both;
+	        text-align:center;
+	        padding:5px; 
+		border-style: groove;		
+		border-radius: 20px;
+		margin-top: 10px;
+/* 		text-align: justify; */
+/* 		border-color: skyblue; */
+	}
 	.footer1{
 		margin-top: 15px;	
 		}
@@ -112,16 +124,20 @@
             <div class="introdution">
                 <div id="theme">                    
 		    <div class="section1 removeborder">		
-          <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC<a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <a href="image/ATC Training Course Registration Form-培训课程注册登记表.doc" download="ATC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a> <br/>
-          <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
+          <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC<br/>
+          <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE<br/>
                   </div>
+		<div class="section2 removeborder">
+			<p style="text-indent:2em "><a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a><br/>
+			<p style="text-indent:2em "><a href="FHE syllabus.html">FHE Syllabus(课程安排)</a><br/>
+		</div>
 	<div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>
-		        <p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc">Registration Form</a></p>
+		        <p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc" download="Conference and Training Camp Registration Form-注册登记表.doc">Registration Form(注册登记表)</a></p>
 			</div>	
 	<div class="footer2 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
-		</div>
+		</div>		   
 		<div class="footer3 removeborder">
                 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>
 		</div>
