--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -56,7 +56,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
-/* 		text-align: justify; */
+		text-align: justify;
 /* 		border-color: skyblue; */
 	}
 	.footer1{
@@ -111,7 +111,7 @@
                                     <a href="courses.html">Training Camp</a>
                                 </li>
                                 <li class="submenu">
-                                    <a href="project.html">Projects</a>
+                                     <a href="project.html">Projects</a>
                                 </li>
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
