--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -54,7 +54,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
-/* 		text-align: justify; */
+		text-align: justify;
 /* 		border-color: skyblue; */
 	}
 	.footer1{
