--- a/Conference.html
+++ b/Conference.html
@@ -33,10 +33,10 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}	
-	.section{
+/* 	.section{
 		margin-bottom: 30px;
-		}
-	.section1 {
+		} */
+/* 	.section1 {
 	        background-color:aliceblue;	     
 	        color:black;
 	        clear:both;
@@ -47,7 +47,7 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
-	}
+	} */
 	.section2 {
 	        background-color:aliceblue;
 	        color:black;
@@ -146,9 +146,9 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">	
-		<div class="section">
+<!-- 		<div class="section">
                     <p style="text-align: center;font-size: 20px">Conferences</p>
-		</div>
+		</div> -->
 		<p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png" style="width:25%; height:25%; margin: 10px;" ><img img alt="CSAC-2019" src="image/circle-cropped-csac.png" style="width:25%; height:25%; margin: 10px;" ><img alt="安全多方计算国际论坛-2019" src="image/logo.png" style="width:25%; height:25%;margin: 10px;"></a> <br/>
 <!--                      <hr> -->
 <!-- 		      <div class="section1 removeborder">
