--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -130,6 +130,7 @@
 		<div class="section2 removeborder">
 			<p style="text-indent:2em "><a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a><br/>
 			<p style="text-indent:2em "><a href="FHE syllabus.html">FHE Syllabus(课程安排)</a><br/>
+			<p style="text-indent:2em "><a href="IoT syllabus.html">IoT Syllabus(课程安排)</a><br/>
 		</div>
 	<div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>
