--- a/Register.html
+++ b/Register.html
@@ -127,51 +127,48 @@
                 <div id="theme">
                   <h1 align="center"><strong><font size="10">Register</font></strong></h1><br>
 		<form  action="https://formspree.io/f/xyylnwvp" method="POST">
-			<table border="0" style="margin:0 auto;">
+			<table border="0" style="margin:0 auto; ">
 				<div class="section">
 				<tr>
-					<td>First name:</td>
-					<td>Last name:</td>
+					<td style="padding: 10px 0; width: 110px" >Name/姓名</td>
+					<td><input type="text" name="Name/姓名" style="width: 120px;height: 20px;"></td>
+					<td style="padding: 10px 6px; width: 110px" >Gender/性别</td>
+					<td><input type="text" name="Gender/性别" style="width: 120px;height: 20px;"></td>
+					<td style="padding: 10px 0; width: 110px">Profession/Career/职务/职称</td>
+					<td><input type="text" name="Profession/Career/职务/职称" style="width: 120px;height: 20px;"></td>
 				</tr>
 				<tr>
-					<td><input type="text" name="First name" style="width: 110px;height: 20px;"></td>
-					<td><input type="text" name="Last name" style="width: 100px;height: 20px;"></td>
+					<td style="padding: 10px 0;">Telephone Number/电话</td>
+					<td><input type="text" name="Telephone Number/电话" style="width: 120px;height: 20px;"></td>
+					<td style="padding: 10px 6px; width: 110px">Email/电子邮箱</td>
+					<td colspan=3><input type="text" name="Email/电子邮箱" style="width: 370px;height: 20px;"></td>
 				</tr>
-				<tr>
-								<td>E-mail</td>
+							<tr>
+								<td style="padding: 10px 0;">Organization/工作单位</td>
+								<td colspan=5><input type="text" name="Organization/工作单位" style="width: 600px;height: 20px;"></td>
 							</tr>
 							<tr>
-								<td colspan=2 >
-									<input type="text" name="E-mail" style="width: 380px;height: 20px;">
-								</td>
+								<td style="padding: 10px 0;">Conference/Training Camp/参加的会议/训练营</td>
+								<td colspan=5><input type="text" name="Conference/Training Camp/参加的会议/训练营" style="width: 600px;height: 20px;"></td>
 							</tr>
 							<tr>
-								<td>Company/University name</td>
+								<td style="padding: 10px 0;">Receipt Title/发票抬头</td>
+								<td  colspan=5><input type="text" name="Receipt Title/发票抬头" style="width: 600px;height: 20px;"></td>
 							</tr>
 							<tr>
-								<td colspan="2">
-									<input type="text" name="Company/University name" style="width: 380px;height: 20px;">
-								</td>
+								<td style="padding: 10px 0;">Unified Social Credit Code/单位统一社会信用代码</td>
+								<td colspan=5><input type="text" name="Unified Social Credit Code/单位统一社会信用代码" style="width: 600px;height: 20px;"></td>
 							</tr>
 							<tr>
-								<td>Social unified credit code/Taxi number</td>
+								<td style="padding: 10px 0;">Receipt Content/发票内容</td>
+								<td colspan=5><input type="text" name="Receipt Content/发票内容" style="width: 600px;height: 20px;"></td>
 							</tr>
 							<tr>
-								<td colspan="2">
-									<input type="text" name="Social unified credit code/Taxi number " style="width: 380px;height: 20px;">
-								</td>
-							</tr>						
+								<td style="padding: 10px 0;">详细发票邮寄地址/ Address and Postcode</td>
+								<td colspan=5><input type="text" name="详细发票邮寄地址/ Address and Postcode" style="width: 600px;height: 20px;"></td>
+							</tr>                           							
 							<tr>
-								<td>Message (Conference/train camp name)</td>
-							</tr>
-							<tr >
-								<td colspan="2" >
-									<textarea rows="5" cols="48"></textarea>
-								</td>
-							</tr>                           
-							</tr>
-							<tr>
-								<td><input type="submit" value="Submit" ></td>
+								<td style="padding: 10px 0;"><input type="submit" value="Submit" ></td>
 							</tr>
 				</div>
 				</div>
