--- a/Conference.html
+++ b/Conference.html
@@ -36,23 +36,21 @@
 /* 	.section{
 		margin-bottom: 30px;
 		} */
-/* 	.section1 {
+	.section1 {
 	        background-color:aliceblue;	     
 	        color:black;
-	        clear:both;
-	        text-align:center;
+	        clear:both;	       
 	        padding:5px; 
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
 /* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
-	} */
+	}
 	.section2 {
 	        background-color:aliceblue;
 	        color:black;
-	        clear:both;
-	        text-align:center;
+	        clear:both;	    
 	        padding:5px; 
 		border-style: groove;
 /* 		border-color: skyblue; */
@@ -151,9 +149,9 @@
 		</div> -->
 		<p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png" style="width:15%; height:15%; margin: 10px;" ><img img alt="CSAC-2019" src="image/circle-cropped-csac.png" style="width:15%; height:15%; margin: 10px;" ><img alt="安全多方计算国际论坛-2019" src="image/logo.png" style="width:15%; height:15%;margin: 10px;"></a> <br/>
 <!--                      <hr> -->
-<!-- 		      <div class="section1 removeborder">
+		      <div class="section1 removeborder">
                      <p style="text-indent:2em ">With rapid development of information science, especially Interdisciplinary development, it is very important for experts in different fields to discuss with each other around the world.<br/>
-		     </div> -->
+		     </div>
 			<!-- <hr> -->
 		    <div class="section2 removeborder">                  
                     <p style="text-indent:2em ">DFSC organizes and participates in the organization of a series of conferences in information science. Conferences would like to invite well-known experts in theoretical research, implementation and application to give invited topics including: Mathematical theory and its application, Cryptographic theory and its application, Cyberspace security, Artificial intelligence, Digital economics and society, Cloud computing, Secure and privacy-preserving computation, Hardware design and implementation, Software design and implementation, Quantum computation and its application, 5G/6G communication and application, Internet of Things, Autopilot and implementation, Satellite communication and its application, etc..<br/> 
