--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -131,7 +131,7 @@
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC<br/>
 		 </div>
 		<div class="section2 removeborder">	
-		   <p style="text-indent:2em "><a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a><br/>
+		   <p style="text-indent:2em "><a href="DP syllabus.html">DPLA Syllabus(课程安排)</a><br/>
 		    <p style="text-indent:2em "><a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a><br/>
 		    <p style="text-indent:2em "><a href="PQC syllabus.html">PQC syllabus(课程安排)</a><br/>
 		   </div>
