--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -128,7 +128,7 @@
           <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE<br/>
                   </div>
 		<div class="section2 removeborder">
-			<p style="text-indent:2em "><a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a><br/>
+			<p style="text-indent:2em "><a href="ATC syllabus.html">ATC Syllabus(课程安排)</a><br/>
 			<p style="text-indent:2em "><a href="FHE syllabus.html">FHE Syllabus(课程安排)</a><br/>
 			<p style="text-indent:2em "><a href="IoT syllabus.html">IoT Syllabus(课程安排)</a><br/>
 		</div>
