--- a/ATC syllabus.html
+++ b/ATC syllabus.html
@@ -111,7 +111,7 @@ date.setTime(date.getTime() - skew)
 				</ul>
 			</li>
                                  <li class="submenu">
-                                    <a href="courses.html">Training Camp</a>
+                                    <a href="Training-Camp.html">Training Camp</a>
                                 </li>
                                 <li class="submenu">
                                     <a href="project.html">Projects</a>
