--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -79,7 +79,7 @@
 				</ul>
 			</li>
                                  <li class="submenu">
-                                    <a href="courses.html">Training Camp</a>
+                                    <a href="Training-Camp.html">Training Camp</a>
                                 </li>
                                 <li class="submenu">
                                     <a href="project.html">Projects</a>
