--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 					<li style="vertical-align:middle;"><a href="QPQC Introduction.html">QPQC</a></li>
 					<li style="vertical-align:middle;"><a href="CSAC Introduction.html">CSAC</a></li>
 					<li style="vertical-align:middle;"><a href="CC Introduction.html">CC</a></li>
+					<li style="vertical-align:middle;"><a href="About us Introduction.html">About us</a></li>
 				</ul>
 			</li>
                                  <li class="submenu">
@@ -146,19 +147,7 @@
                         <div class="introdution">
                             <div id="theme">				    
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
-				<div class="section1">
-                                <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>            
-				    </div>
-					<div class="section removeborder">
-                                <p style="text-indent:2em ">Digital Future Research Center (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. <br/>
-            			</div>        
-                                <div class="footer removeborder">
-                                <p style="text-indent:2em ">DFSC have invited a group of professors and researchers in information science to join DFSC, and has been built a series of cooperation with Universities and Enterprises. <br/>					
-            			</div>
-                            <div class="footer1 removeborder">				  
-				    <p style="text-indent:2em ">In order to promoting mutual discussion in academic research and industrial applications, DFSC organizes and participates in the organization of a series of <a href="Conference.html">conferences</a> in information science. At the same time, DFSC also provides online training <a href="courses.html">camp</a> to cultivate talents in information science.</p>
-		    </div>
+                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->									                                                           
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
