--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -125,6 +125,7 @@
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
 					<li ><a href="CC Introduction.html">CC</a></li>
+					<li ><a href="About us Introduction.html">About us</a></li>
 				</ul>
 			</li>
                                  <li class="submenu">
