--- a/project.html
+++ b/project.html
@@ -152,6 +152,7 @@ date.setTime(date.getTime() - skew)
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
 					<li ><a href="CC Introduction.html">CC</a></li>
+					<li ><a href="About us Introduction.html">About us</a></li>
 				</ul>
 			</li>
                                  <li class="submenu">
