--- a/News.html
+++ b/News.html
@@ -120,8 +120,7 @@
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
-					<li ><a href="CC Introduction.html">CC</a></li>
-					<li ><a href="About us Introduction.html">About us</a></li>
+					<li ><a href="CC Introduction.html">CC</a></li>					
 				</ul>
 			</li>
                                  <li class="submenu">
@@ -132,6 +131,9 @@
                                 </li>
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
+                                </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
                                 </li>
                             </ul>
                         </div>
