--- a/project.html
+++ b/project.html
@@ -151,8 +151,7 @@ date.setTime(date.getTime() - skew)
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
-					<li ><a href="CC Introduction.html">CC</a></li>
-					<li ><a href="About us Introduction.html">About us</a></li>
+					<li ><a href="CC Introduction.html">CC</a></li>				
 				</ul>
 			</li>
                                  <li class="submenu">
@@ -163,6 +162,9 @@ date.setTime(date.getTime() - skew)
                                 </li>
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
+                                </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
                                 </li>
                             </ul>
                         </div>
