--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                             <div id="theme">				    
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->									                                                           
-		<div class="footer3 removeborder">
+<!-- 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
 		<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:25%; height:25%; margin: 10px;" ><img src="image/图层%201(1).png" style="width:25%; height:25%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:25%; height:25%;margin: 10px;"></a> <br/>		
 		 <div class="footer4 removeborder">
 			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>			
-		</div>  
+		</div>   -->
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
                      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
