--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 					 <li style="vertical-align:middle;"><a href="SMPC Introduction.html">SMPC</a></li>
 					<li style="vertical-align:middle;"><a href="QPQC Introduction.html">QPQC</a></li>
 					<li style="vertical-align:middle;"><a href="CSAC Introduction.html">CSAC</a></li>
-					<li style="vertical-align:middle;"><a href="CC Introduction.html">CC</a></li>
-					<li style="vertical-align:middle;"><a href="About us Introduction.html">About us</a></li>
+					<li style="vertical-align:middle;"><a href="CC Introduction.html">CC</a></li>					
 				</ul>
 			</li>
                                  <li class="submenu">
@@ -136,6 +135,9 @@
                                 </li>
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
+                                </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
                                 </li>
                             </ul>
                         </div>
