--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -87,6 +87,9 @@
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
                                 </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
+                                </li>
                             </ul>
                         </div>
                     </div><!-- /.container-->
