--- a/Register-ch.html
+++ b/Register-ch.html
@@ -116,6 +116,9 @@
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
                                 </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
