--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -119,6 +119,9 @@ date.setTime(date.getTime() - skew)
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
                                 </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
