--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -114,6 +114,9 @@
                                 <li class="submenu">
                                     <a href="product.html">Products</a>
                                 </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
