--- a/index.html
+++ b/index.html
@@ -149,14 +149,43 @@
                         <div class="introdution">
                             <div id="theme">				    
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->									                                                           
-<!-- 		<div class="footer3 removeborder">
+                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
+		<div class="section1">
+					<tr>
+						<td>Post Quantum Cryptography Implementation and Applications</td>
+						<td>Blockchain and Application</td>
+						<td>Artificial Intelligence Application and Security</td>
+					</tr>
+					<tr>
+						<td><img src="image/DFSC图片1.png"></td>
+						<td><img src="image/DFSC图片2.png"></td>
+						<td><img src="image/DFSC图片3.png"></td>
+					</tr>
+                        </div>
+				<!-- </table> -->
+					<div class="section removeborder">
+				        <tr>
+						<td>CloudNative Application and Security</td>
+						<td>Data Security and Users Privacy</td>
+						<td>Internet of Things Application and Security</td>
+					</tr>
+					<tr>
+						<td><img src="image/DFSC图片4.png"></td>
+						<td><img src="image/DFSC图片5.png"></td>
+						<td><img src="image/DFSC图片6.png"></td>
+					</tr>
+                                </div>  
+                                <div class="footer removeborder">
+                                </div>
+                            <div class="footer1 removeborder">				  
+				    </div>
+		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
 		<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:25%; height:25%; margin: 10px;" ><img src="image/图层%201(1).png" style="width:25%; height:25%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:25%; height:25%;margin: 10px;"></a> <br/>		
 		 <div class="footer4 removeborder">
-			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>			
-		</div>   -->
+			 <p style="text-align:center"><strong>©2016 DFSC Center &nbsp;&nbsp;||&nbsp;&nbsp; UK</strong></a> <br/>			
+		</div>  
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
                      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
