--- a/index.html
+++ b/index.html
@@ -156,11 +156,7 @@
 						<td>Blockchain and Application</td>
 						<td>Artificial Intelligence Application and Security</td>
 					</tr>
-					<tr>
-						<td><img src="image/DFSC图片1.png"></td>
-						<td><img src="image/DFSC图片2.png"></td>
-						<td><img src="image/DFSC图片3.png"></td>
-					</tr>
+					<p style="text-align:center"><img src="image/DFSC图片1.png " style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片2.png" style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片3.png " style="width:40%; height:40%;margin: 10px;"></a> <br/>	
                         </div>
 				<!-- </table> -->
 					<div class="section removeborder">
@@ -169,11 +165,7 @@
 						<td>Data Security and Users Privacy</td>
 						<td>Internet of Things Application and Security</td>
 					</tr>
-					<tr>
-						<td><img src="image/DFSC图片4.png"></td>
-						<td><img src="image/DFSC图片5.png"></td>
-						<td><img src="image/DFSC图片6.png"></td>
-					</tr>
+					<p style="text-align:center"><img src="image/DFSC图片4.png " style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片5.png" style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片6.png " style="width:40%; height:40%;margin: 10px;"></a> <br/>	
                                 </div>  
                                 <div class="footer removeborder">
                                 </div>
