--- a/index.html
+++ b/index.html
@@ -151,26 +151,11 @@
 <!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
 		<div class="section1">
-					<tr>
-						<td>Post Quantum Cryptography Implementation and Applications</td>
-						<td>Blockchain and Application</td>
-						<td>Artificial Intelligence Application and Security</td>
-					</tr>
-					<p style="text-align:center"><img src="image/DFSC图片1.png " style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片2.png" style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片3.png " style="width:40%; height:40%;margin: 10px;"></a> <br/>	
-                        </div>
-				<!-- </table> -->
-					<div class="section removeborder">
-				        <tr>
-						<td>CloudNative Application and Security</td>
-						<td>Data Security and Users Privacy</td>
-						<td>Internet of Things Application and Security</td>
-					</tr>
-					<p style="text-align:center"><img src="image/DFSC图片4.png " style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片5.png" style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片6.png " style="width:40%; height:40%;margin: 10px;"></a> <br/>	
-                                </div>  
-                                <div class="footer removeborder">
-                                </div>
-                            <div class="footer1 removeborder">				  
-				    </div>
+					<p style="text-align:center;">Post Quantum Cryptography Implementation and Applications &nbsp;&nbsp;&nbsp;Blockchain and Application&nbsp;&nbsp;&nbsp;Artificial Intelligence Application and Security</br>
+					<p style="text-align:center"><img src="image/DFSC图片1.png " style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片2.png" style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片3.png " style="width:40%; height:40%;margin: 10px;"></a> <br/>	                        
+					<p style="text-align:center;">CloudNative Application and Security &nbsp;&nbsp;&nbsp;Data Security and Users Privacy&nbsp;&nbsp;&nbsp;Internet of Things Application and Security</br>
+				        <p style="text-align:center"><img src="image/DFSC图片4.png " style="width:40%; height:40%; margin: 10px;" ><img srData Security and Users Privacyc="image/DFSC图片5.png" style="width:40%; height:40%; margin: 10px;" ><img src="image/DFSC图片6.png " style="width:40%; height:40%;margin: 10px;"></a> <br/>	
+                                </div>                             
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
